--- a/site/blueprints/pages/projects.yml
+++ b/site/blueprints/pages/projects.yml
@@ -1,8 +1,27 @@
 title: Projects
-preset: pages
 pages: true
-drafts: 
-  template: project
+
+
+columns:
+  - width: 1/2
+    sections:
+      drafts:
+        headline: Drafts
+        type: pages
+        status: draft
+        templates: project
+
+      published:
+        headline: Published Articles
+        type: pages
+        status: listed
+        templates: project
+  - width: 1/2
+    fields:
+      text: 
+        label: Projects text presentation
+        type: markdown
+
 
 
 
