--- a/site/blueprints/pages/project.yml
+++ b/site/blueprints/pages/project.yml
@@ -6,10 +6,20 @@ fields:
   cover: 
     label: Cover Image
     type: files
-  text:
-    label: Text
-    type: markdown
+  summary:
+    label: Summary
+    type: textarea
   link: 
     label: Link to project page
     type: url 
+    help: Fill this field with the project url if the project is linked to an external page
+  text:
+    label: Text
+    type: textarea
+    size: medium
+  related: 
+    label: Related pages
+    type: pages
+    query: page.siblings(false)
+
 
