--- a/site/blueprints/pages/default.yml
+++ b/site/blueprints/pages/default.yml
@@ -3,6 +3,9 @@ preset: page
 pages: false
 
 fields:
+  cover: 
+    label: Cover Image
+    type: files
   text:
     label: Text
     type: textarea
