change social network image system

--- a/site/blueprints/site.yml
+++ b/site/blueprints/site.yml
@@ -43,6 +43,9 @@ tabs:
           sitecolor: 
             label: Website main color
             type: color
+          socialimage: 
+            label: Image for social medias
+            type: files
           # tags: 
           #   label: Categories
           #   type: structure
